--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -81,7 +81,7 @@ h6,
 
 .btn-square,
 .btn-sm-square,
-.btn-lg-square {
+.btn-lg-square {xto
     padding: 0;
     display: flex;
     align-items: center;
@@ -489,4 +489,74 @@ h6,
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 15%;
+}
+
+
+
+
+.quadrado{
+    flex: 0 0 auto;
+    width: 66.66667%;
+    margin-left: 100px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(252, 241, 95, 0.493);
+
+}
+
+.texto{
+    color: #fff;
+}
+
+.batata{
+    margin-left: 100px;
+    margin-bottom: 10px;
+    color: #ffffff;
+    padding-bottom: 5px;
+    font-size: 1em;
+    font-family: "Playfair Display", serif;
+    position: relative;
+    background-color: rgba(252, 241, 95, 0.493);
+    width: 66.66667%;
+    border-radius: 10px;
+    text-align: center;
+}
+.titulocurso{
+    margin-top: 150px;
+    color: #FFF;
+}
+
+.flex{
+    display:flex;
+    flex-direction: row;
+}
+
+.balao{
+    margin-top: 50px;
+    background-color: rgba(252, 95, 95, 0.493);
+    width: 33.3333%;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+}
+.balao1{
+    margin-top: 50px;
+    background-color: rgba(95, 252, 218, 0.493);
+    width: 33.3333%;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
+}
+.balao2{
+    margin-top: 50px;
+    background-color: rgba(132, 252, 95, 0.493);
+    width: 33.3333%;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
 }
