criei a area de endereços exportei google maps para o site

--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -490,3 +490,12 @@ h6,
     margin-left: auto;
     padding-bottom: 15%;
 }
+
+.end {
+    margin-top: 100px;
+    text-align: center;
+}
+
+img {
+    margin-top: 40px;
+}
