--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -507,13 +507,6 @@ h6,
 }
 
 
-.end {
-    position: relative;
-    font-family: 'Noto Serif Makasar', serif;
-    text-align: center;
-    font-weight: bold
-    
-}
 
 img {
     margin-top: 40px;
@@ -580,6 +573,7 @@ img {
     border-radius: 10px;
     text-align: center;
 }
+
 .titulocurso{
     margin-top: 150px;
     color: #FFF;
@@ -625,12 +619,61 @@ img {
     margin-left: 6%;
     margin-bottom: 5%;
 }
-<<<<<<< HEAD
-  
-
-=======
 .description{
     color: #FFF;
 }
->>>>>>> 09deef65568ae3b10931924d4885f29d049b6b05
   
+.endereco_cima {
+    padding-left: 5%;
+}
+
+.endereco_baixo {
+    padding-left: 60%;
+    margin-top: 15%;
+
+}
+
+.end_baixo  {
+    position: relative;
+    font-family: 'Noto Serif Makasar', serif;
+    text-align: center;
+    font-weight: bold;
+    margin-right: 40%;
+    margin-top: -20%;
+    padding-bottom: 20%;
+}
+
+
+.end {
+    position: relative;
+    font-family: 'Noto Serif Makasar', serif;
+    text-align: center;
+    font-weight: bold;
+    margin-left: 40%;
+    margin-top: -20%;
+}
+
+@media (max-width: 700px) {
+    .end {
+        margin-left: 10%;
+        padding-bottom: 5%;
+        width: 310px;
+        padding-top: 20%;
+    }
+    .end_baixo {
+        margin-left: 10%;
+        margin-top: 10%;
+        padding-top: 0%;
+        width: 310px !important;
+    }
+    .endereco_baixo {
+        padding-left: 0%;
+        margin-top: 0%;
+    }
+    .endereco_cima {
+        padding-left: 0%;
+        
+        
+    }
+
+}
